--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <section>
         <h1>Hello World</h1>
-        <p>Welcome!</p>
+        <p>Welcome to codemonks!</p>
     </section>
     <footer>
 
