--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Code Monks | Home</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <!--favicon-->
+    <link type="image/x-icon" rel="icon" href="favicon.ico"/>
+    <link type="image/x-icon" rel="shortcut icon" href="favicon.ico"/>
   </head>
   <body>
     <header>
