--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section>
         <h1>Hello World</h1>
         <p>Welcome to Code Monks!</p>
-        <p>This is a community for all Developers around the world!</p>
+        <p>This is a community</p>
         <p>Here, everyone can discuss what they are working on, as well as make startups and develop.</p>
     </section>
     <footer>
