--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <section>
         <h1>Hello World</h1>
         <p>Welcome to Code Monks!</p>
+        <img src="coderman.png" alt="Coderman">
         <p>This is a community</p>
         <p>Here, everyone can discuss what they are working on, as well as make startups and develop.</p>
         <p>If you would like to join us, temporarily contact us through <a href="http://www.techwhale.net/">TechWhale.</a></p>
