--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   </head>
   <body>
     <header>
-
+        <nav>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Forum</a></li>
+          </ul>
+        </nav>
     </header>
     <section>
         <h1>Hello World</h1>
