--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <p>This is a community</p>
         <p>Here, everyone can discuss what they are working on, as well as make startups and develop.</p>
         <p>If you would like to join us, temporarily contact us through <a href="http://www.techwhale.net/">TechWhale.</a></p>
+        <img src="smiley.gif" alt="Smiley">
     </section>
     <footer>
 
