--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Code Monks | Home</title>
+    <title> Code Monks | Home </title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <!--favicon-->
     <link type="image/x-icon" rel="icon" href="favicon.ico"/>
     <link type="image/x-icon" rel="shortcut icon" href="favicon.ico"/>
   </head>
@@ -12,10 +11,10 @@
     <header>
         <nav>
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Forum</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="forum.html">Forum</a></li>
           </ul>
         </nav>
     </header>
@@ -25,10 +24,10 @@
         <img src="coderman.png" alt="Coderman">
         <p>This is a community</p>
         <p>Here, everyone can discuss what they are working on, as well as make startups and develop.</p>
-        <p>If you would like to join us, temporarily contact us through <a href="http://www.techwhale.net/">TechWhale.</a></p>
+        <p>If you would like to join us, temporarily contact us through <a id="TW" href="http://www.techwhale.net/">TechWhale.</a></p>
     </section>
     <footer>
-
+      <p id="copy"> &copy; Code Monks | 2014 </p>
     </footer>
   </body>
 </html>
