--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="coderman.png" alt="Coderman">
         <p>This is a community</p>
         <p>Here, everyone can discuss what they are working on, as well as make startups and develop.</p>
-        <p>If you would like to join us, temporarily contact us through <a href="http://www.techwhale.net/">TechWhale.</a></p>
+        <p>If you would like to join us, temporarily contact us through <a href="http://christiancross222.github.io/">Chris' site.</a></p>
     </section>
     <footer>
 
