--- a/about.html
+++ b/about.html
@@ -19,7 +19,16 @@
       </nav>
     </header>
     <section>
-      <h1> About us </h1>
+      <h1>About us</h1>
+      <h2>Monks:</h2>
+      <p>Chris</p>
+      <p>Ben</p>
+      <p>Vipul</p>
+      <p>Riley</p>
+      <p>Khandy</p>
+      <p>Tas</p>
+      <p>Hagan</p>
+
     </section>
     <footer>
       <p id="copy"> &copy; Code Monks | 2014 </p>
