--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <p>If you would like to join us, temporarily contact us through <a href="http://christiancross222.github.io/">Chris' site.</a></p>
     </section>
     <footer>
+      <hr width="800px" color="brown"></hr>
+      <ul id="social">
+        <li><a href=""><img src="facebook.png"  alt="Facebook"></a></li>
+        <li><a href=""><img src="twitter.png"  alt="Twitter"></a></li>
+      </ul>
       <p id="copy"> &copy; Code Monks | 2014 </p>
     </footer>
   </body>
