--- a/about.html
+++ b/about.html
@@ -31,6 +31,11 @@
 
     </section>
     <footer>
+      <hr width="800px" color="brown"></hr>
+      <ul id="social">
+        <li><a href=""><img src="facebook.png"  alt="Facebook"></a></li>
+        <li><a href=""><img src="twitter.png"  alt="Twitter"></a></li>
+      </ul>
       <p id="copy"> &copy; Code Monks | 2014 </p>
     </footer>
   </body>
