--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,11 @@
       <h1>Contact us:</h1>
   </section>
   <footer>
+    <hr width="800px" color="brown"></hr>
+    <ul id="social">
+      <li><a href=""><img src="facebook.png"  alt="Facebook"></a></li>
+      <li><a href=""><img src="twitter.png"  alt="Twitter"></a></li>
+    </ul>
     <p id="copy"> &copy; Code Monks | 2014 </p>
   </footer>
 </body>
