--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <hr width="800px" color="brown"></hr>
     <ul id="social">
       <li><a href=""><img src="facebook.png"  alt="Facebook"></a></li>
-      <li><a href=""><img src="twitter.png"  alt="Twitter"></a></li>
+      <li><a href="https://twitter.com/CodeMonks404"><img src="twitter.png"  alt="Twitter"></a></li>
     </ul>
     <p id="copy"> &copy; Code Monks | 2014 </p>
   </footer>
