--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section>
         <h1>Hello World</h1>
         <p>Welcome to Code Monks!</p>
-        <img src="coderman.png" alt="Coderman">
+        <img src="codemonks.png" alt="Code Monks">
         <p>This is a community</p>
         <p>Here, everyone can discuss what they are working on, as well as make startups and develop.</p>
 
