--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <p>This is a community</p>
         <p>Here, everyone can discuss what they are working on, as well as make startups and develop.</p>
-        <p>If you would like to join us, temporarily contact us through <a href="http://christiancross222.github.io/contact.html/">Chris's site.</a></p>
+        <p id="TW">If you would like to join us, temporarily contact us through <a href="http://christiancross222.github.io/contact.html">Chris's site.</a></p>
     </section>
     <footer>
       <hr width="800px" color="brown"></hr>
