--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,19 @@
     </nav>
   </header>
   <section>
-      <h1>Contact us:</h1>
+      <h1>Languages we know:</h1>
+      <table id="table">
+        <tr>
+          <td>Objective-C</td>
+          <td>HTML/CSS</td>
+          <td>JavaScript</td>
+        </tr>
+        <tr>
+          <td>Swift</td>
+          <td>Java</td>
+          <td>JQuery</td>
+        </tr>
+      </table>
   </section>
   <footer>
     <hr width="800px" color="brown"></hr>
