--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title> Code Monks | Home </title>
+
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
+
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="bootstrap.css" rel="stylesheet" type="text/css">
     <link type="image/x-icon" rel="icon" href="favicon.ico"/>
     <link type="image/x-icon" rel="shortcut icon" href="favicon.ico"/>
   </head>
@@ -19,13 +29,13 @@
         </nav>
     </header>
     <section>
-        <h1>Hello World</h1>
+      <div class="container">
+        <div class="jumbotron">
+          <h1>Hello World</h1>
+        </div>
+      </div>
         <p>Welcome to Code Monks!</p>
-
         <img src="codemonks.png" alt="Code Monks">
-
-
-
         <p>This is a community</p>
         <p>Here, everyone can discuss what they are working on, as well as make startups and develop.</p>
         <p id="TW">If you would like to join us, temporarily contact us through <a href="http://christiancross222.github.io/contact.html">Chris's site.</a></p>
@@ -38,5 +48,9 @@
       </ul>
       <p id="copy"> &copy; Code Monks | 2014 </p>
     </footer>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
   </body>
 </html>
