--- a/index.html
+++ b/index.html
@@ -19,14 +19,42 @@
   </head>
   <body>
     <header>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="forum.html">Forum</a></li>
-          </ul>
-        </nav>
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Code Monks</a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+              <li><a href="about.html">About</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="http://www.techwhale.net/">TechWhale</a></li>
+                  <li><a href="http://christiancross222.github.io/">Chris's Site</a></li>
+                  <li><a href="http://www.swift404.com/">Ben's Site</a></li>
+                  <li><a href="http://mikelpartridge.github.io/">Mike's Site</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="contact.html">Contact</a></li>
+              <li><a href="#">Other</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+
     </header>
     <section>
       <div class="container">
@@ -39,6 +67,9 @@
         <p>This is a community</p>
         <p>Here, everyone can discuss what they are working on, as well as make startups and develop.</p>
         <p id="TW">If you would like to join us, temporarily contact us through <a href="http://christiancross222.github.io/contact.html">Chris's site.</a></p>
+
+
+
     </section>
     <footer>
       <hr width="800px" color="brown"></hr>
@@ -48,6 +79,8 @@
       </ul>
       <p id="copy"> &copy; Code Monks | 2014 </p>
     </footer>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
