--- a/contact.html
+++ b/contact.html
@@ -3,19 +3,57 @@
 <head>
   <meta charset="utf-8">
   <title> Code Monks | Home </title>
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
   <link href="style.css" rel="stylesheet" type="text/css">
+  <link type="image/x-icon" rel="icon" href="favicon.ico"/>
+  <link type="image/x-icon" rel="shortcut icon" href="favicon.ico"/>
+
+
   <link type="image/x-icon" rel="icon" href="favicon.ico"/>
   <link type="image/x-icon" rel="shortcut icon" href="favicon.ico"/>
 </head>
 <body>
   <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="forum.html">Forum</a></li>
-      </ul>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Code Monks</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="http://www.techwhale.net/">TechWhale</a></li>
+                <li><a href="http://christiancross222.github.io/">Chris's Site</a></li>
+                <li><a href="http://www.swift404.com/">Ben's Site</a></li>
+                <li><a href="http://mikelpartridge.github.io/">Mike's Site</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="contact.html">Contact</a></li>
+            <li><a href="#">Other</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
   </header>
   <section>
@@ -41,5 +79,10 @@
     </ul>
     <p id="copy"> &copy; Code Monks | 2014 </p>
   </footer>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
