--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
     </nav>
   </header>
   <section>
-      <h1>Languages we know:</h1>
+      <h1 class="top">Languages we know:</h1>
       <table id="table">
         <tr>
           <td>Objective-C</td>
