--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
-    
+
     <link href="about.css" rel="stylesheet" type="text/css">
 
     <link type="image/x-icon" rel="icon" href="favicon.ico"/>
@@ -55,7 +55,7 @@
       </nav>
     </header>
     <section>
-      <h1>About us</h1>
+      <h1 class="top">About us</h1>
       <h2>Monks:</h2>
       <p>Chris</p>
       <p>Ben</p>
