--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Code Monks</a>
+          <a class="navbar-brand" href="index.html">Code Monks</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
