--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Code Monks</a>
+            <a class="navbar-brand" href="index.html">Code Monks</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,12 +57,74 @@
 
     </header>
     <section>
-      <div class="container">
-        <div class="jumbotron">
-          <h1>Hello World</h1>
-        </div>
+      <div id="myCarousel" class="carousel slide" date-ride="carousel">
+
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-to-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-to-slide-to="1"></li>
+            <li data-target="#myCarousel" data-to-slide-to="2"></li>
+          </ol>
+
+          <div class="carousel-inner">
+            <div class="item active" class="img">
+
+                <img src="html.png" alt="HTML">
+
+              <div class="container">
+
+                  <div class="carousel-caption">
+
+                      <h1>Example Headline</h1>
+                      <p>BLAH BLAH</p>
+                      <p><a class="btn btn-lg btn-primary" href="#" role="button">Button [1]</a></p>
+                  </div>
+
+              </div>
+
+            </div>
+
+            <div class="item" class="img">
+
+              <img src="coderman.png" alt="Coderman">
+
+              <div class="container">
+
+                <div class="carousel-caption">
+
+                  <h1>Example Headline</h1>
+                  <p>BLAH BLAH</p>
+                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Button [2]</a></p>
+                </div>
+
+              </div>
+
+            </div>
+            <div class="item" class="img">
+
+              <img src="coderman.png" alt="Coder Man">
+
+              <div class="container">
+
+                <div class="carousel-caption">
+
+                  <h1>Example Headline</h1>
+                  <p>BLAH BLAH</p>
+                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Button [3]</a></p>
+                </div>
+
+              </div>
+
+            </div>
+
+
+
+          </div>
+
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+
       </div>
-        <p>Welcome to Code Monks!</p>
+        <h1 class="top">Welcome to Code Monks!</h1>
         <img src="codemonks.png" alt="Code Monks">
         <p>This is a community</p>
         <p>Here, everyone can discuss what they are working on, as well as make startups and develop.</p>
