--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 </ul>
               </li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-left">
               <li><a href="contact.html">Contact</a></li>
               <li><a href="#">Other</a></li>
             </ul>
