--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
               </ul>
             </li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-left">
             <li class="active"><a href="contact.html">Contact</a></li>
             <li><a href="#">Other</a></li>
           </ul>
