--- a/about.html
+++ b/about.html
@@ -47,8 +47,7 @@
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-left">
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="#">Other</a></li>
+              <li><a href="Other.html">Other</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
