--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -48,8 +48,7 @@
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-left">
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="#">Other</a></li>
+              <li><a href="Other.html">Other</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
