--- a/index.html
+++ b/index.html
@@ -128,7 +128,10 @@
         <p>This is a community</p>
         <p>Here, everyone can discuss what they are working on, as well as make startups and develop.</p>
         <p id="TW">If you would like to join us, temporarily contact us through <a href="http://christiancross222.github.io/contact.html">Chris's site.</a></p>
-
+        <div class="video">
+          <iframe src="https://embed-ssl.ted.com/talks/simon_sinek_how_great_leaders_inspire_action.html" width="640" height="360" frameborder="0" scrolling="no" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div>
+        
 
 
     </section>
