--- a/about.html
+++ b/about.html
@@ -59,10 +59,7 @@
       <p>Chris</p>
       <p>Ben</p>
       <p>Vipul</p>
-      <p>Riley</p>
-      <p>Khandy</p>
-      <p>Tas</p>
-      <p>Hagan</p>
+      <p>Mike</p>
 
     </section>
     <footer>
