--- a/Other.html
+++ b/Other.html
@@ -66,6 +66,8 @@
       <li>Swift</li>
       <li>Java</li>
       <li>JQuery</li>
+      <li>Python</li>
+      <li>Ruby (Ruby on Rails)</li>
     </ul>
   </section>
   <footer>
