--- a/Other.html
+++ b/Other.html
@@ -41,7 +41,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="http://www.techwhale.net/">TechWhale</a></li>
+                <li><a href="http://www.optimalbit.com/">OptimalBit</a></li>
                 <li><a href="http://christiancross222.github.io/">Chris's Site</a></li>
                 <li><a href="http://www.swift404.com/">Ben's Site</a></li>
                 <li><a href="http://mikelpartridge.github.io/">Mike's Site</a></li>
