--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
     </header>
     <section>
         <h1 class="top">Welcome to Code Monks!</h1>
-        <img src="codemonks.png" alt="Code Monks">
-        <p>This is a community</p>
-        <p>Here, everyone can discuss what they are working on, as well as make startups and develop.</p>
-        <p id="TW">If you would like to join us, temporarily contact us through <a href="http://christiancross222.github.io/contact.html">Chris's site.</a></p>
+        <img src="codemonks.png" alt="Code Monks" height="400px" width="500px">
+        <p>Code Monks is a branch off of <strong>OptimalBit</strong></p>
+        <p>Here, we dicuss coding projects going on within <strong>OptimalBit</strong>, individually.</p>
+        <p><strong>Check out Java SE 8 by Oracle!</strong></p>
 
-        <div class="video">
+        <!--<div class="video">
           <iframe src="https://embed-ssl.ted.com/talks/simon_sinek_how_great_leaders_inspire_action.html" width="640" height="360" frameborder="0" scrolling="no" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>
+        </div>-->
 
-        
+        <object id="flashObj" width="640" height="358" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,47,0"><param name="movie" value="http://c.brightcove.com/services/viewer/federated_f9?isVid=1&isUI=1" /><param name="bgcolor" value="#FFFFFF" /><param name="flashVars" value="videoId=3391370021001&linkBaseURL=http%3A%2F%2Fwww.oracle.com%2Fevents%2Fus%2Fen%2Fjava8%2Findex.html&playerID=1787102915001&playerKey=AQ~~,AAAAAFcSbzI~,OkyYKKfkn3xPOduPEsqhjskdCvDxqymz&domain=embed&dynamicStreaming=true" /><param name="base" value="http://admin.brightcove.com" /><param name="seamlesstabbing" value="false" /><param name="allowFullScreen" value="true" /><param name="swLiveConnect" value="true" /><param name="allowScriptAccess" value="always" /><embed src="http://c.brightcove.com/services/viewer/federated_f9?isVid=1&isUI=1" bgcolor="#FFFFFF" flashVars="videoId=3391370021001&linkBaseURL=http%3A%2F%2Fwww.oracle.com%2Fevents%2Fus%2Fen%2Fjava8%2Findex.html&playerID=1787102915001&playerKey=AQ~~,AAAAAFcSbzI~,OkyYKKfkn3xPOduPEsqhjskdCvDxqymz&domain=embed&dynamicStreaming=true" base="http://admin.brightcove.com" name="flashObj" width="640" height="358" seamlesstabbing="false" type="application/x-shockwave-flash" allowFullScreen="true" allowScriptAccess="always" swLiveConnect="true" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></embed></object>
 
 
 
