--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>-->
 	<!--//team-->
 	<!--clients-->
-	<div class="our-clients">
+	<!--<div class="our-clients">
 		<div class="container">
-			<!-- banner-text Slider starts Here -->
+			 banner-text Slider starts Here
 				<script src="js/responsiveslides.min.js"></script>
 				 <script>
 					// You can also use "$(window).load(function() {"
@@ -259,9 +259,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							}
 						});
 					});
-				</script>
+				</script>-->
 			<!--//End-slider-script -->
-			<div  id="top" class="callbacks_container">
+			<!--<div  id="top" class="callbacks_container">
 				<ul class="rslides" id="slider3">
 					<li>
 						<h4>WHAT OUR CLIENTS ARE SAYING</h4>
@@ -284,7 +284,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div>-->
 	<!--//clients-->
 	<!--blog-->
 	<div class="blog" id="blog">
@@ -358,7 +358,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 	<!--//blog-->
-	<!--footer-->
+	<!--footer
 	<div class="footer" id="footer">
 		<div class="container">
 			<div class="footer-grids">
@@ -412,9 +412,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 		</div>
 	</div>
-	<!--//footer-->
+	//footer-->
 	<div class="footer-bottom">
-		<p>© 2015 All rights reserved | <a href="http://w3layouts.com/">Design</a></p>
+		<p>© 2015 Code Monks | <a href="http://w3layouts.com/">Design</a></p>
 	</div>
 	<!--smooth-scrolling-of-move-up-->
 	<script type="text/javascript">
