--- a/index.html
+++ b/index.html
@@ -355,6 +355,36 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 			</div>
+      <div class="blog-grids">
+				<div class="blog-grids-left">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/gtMkq6IxVKk" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="blog-grids-right">
+					<h4><a href="#">Brin and Page: Founders of Google</a></h4>
+					<p>Google <a href="#" class="bracket">[...]</a> </p>
+				</div>
+				<div class="clearfix"> </div>
+				<div class="caption-imag">
+					<div class="round-shape">
+						<p>a</p>
+					</div>
+				</div>
+			</div>
+      <div class="blog-grids">
+				<div class="blog-grids-left lt-text">
+					<h4><a href="#">Jeff Bezos: Co-Founder and CEO of Amazon </a></h4>
+					<p>Amazon <a href="#" class="bracket">[...]</a></p>
+				</div>
+				<div class="blog-grids-right rt-img">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/tfAhTtBlb2Q" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="clearfix"> </div>
+				<div class="caption-imag">
+					<div class="round-shape">
+						<p>a</p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<!--//blog-->
