--- a/index.html
+++ b/index.html
@@ -385,6 +385,35 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 			</div>
+      <div class="blog-grids">
+				<div class="blog-grids-left">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/vrl5PFB35Ec" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="blog-grids-right">
+					<h4><a href="#">Mark Cuban: Investor</a></h4>
+					<p>Cuban <a href="#" class="bracket">[...]</a> </p>
+				</div>
+				<div class="clearfix"> </div>
+				<div class="caption-imag">
+					<div class="round-shape">
+						<p>a</p>
+					</div>
+				</div>
+			</div>
+      <div class="blog-grids-left lt-text">
+        <h4><a href="#">Reed Hastings: Netflix </a></h4>
+        <p>Netflix <a href="#" class="bracket">[...]</a></p>
+      </div>
+      <div class="blog-grids-right rt-img">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/aEO7GLNrVPI" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="clearfix"> </div>
+      <div class="caption-imag">
+        <div class="round-shape">
+          <p>a</p>
+        </div>
+      </div>
+    </div>
 		</div>
 	</div>
 	<!--//blog-->
