--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 			</div>
+      <div class="blog-grids">
       <div class="blog-grids-left lt-text">
         <h4><a href="#">Reed Hastings: Netflix </a></h4>
         <p>Netflix <a href="#" class="bracket">[...]</a></p>
