--- a/index.html
+++ b/index.html
@@ -329,9 +329,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="blog-grids-right">
 					<h4><a href="#">Steve Jobs: Co-Founder and CEO of Apple </a></h4>
-					<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit
-						esse molestie consequat, vel illum dolore eu feugiat nulla
-						facilisis at vero eros et accumsan et iusto odio dignissim qui <a href="#" class="bracket">[...]</a> </p>
+					<p>Apple <a href="#" class="bracket">[...]</a> </p>
 				</div>
 				<div class="clearfix"> </div>
 				<div class="caption-imag">
