--- a/untitled folder/index.html
+++ b/untitled folder/index.html
@@ -129,14 +129,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 	<!--skills-->
-	<div class="skills" id="skills">
+	<!--<div class="skills" id="skills">
 		<div class="container">
 			<h4>OUR SKILLS</h4>
 			<div class="skill-circles">
-				<div class="circle-grids">
-					<div class="circle" id="circles-1"><img src="images/Swift_Logo.png" alt="" height="200px" width="200px"></div>
-					<lable>Swift</lable>
-				</div>
 				<div class="circle-grids">
 					<div class="circle" id="circles-2"><img src="images/java_cup.png" alt="" height="200px" width="200px"></div>
 					<lable>Java</lable>
@@ -154,7 +150,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<lable>Python</lable>
 				</div>
 				<div class="clearfix"> </div>
-				<!--script
+				script
 				<script type="text/javascript" src="js/circles.js"></script>
 					<script>
 						var colors = [
