--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<div class="banner-title">
 				<h1>Welcome to Code Monks!</h1>
+				<p>Welcome back everyone!</p>
 				<div class="download">
 					<a href="#">More about Code Monks</a>
 				</div>
